@@ -449,7 +449,7 @@ well-crafted.</p>
 &nbsp;<br>
 <b>procedure</b> design_example <b>is</b><br>
 
-team_awesome : team.member;
+team_awesome : teams.member;
 
 <br>
 &nbsp;&nbsp;<b>type</b> customer <b>is</b> <b>new</b> natural;<br>
@@ -461,25 +461,25 @@ team_awesome : team.member;
 &nbsp;&nbsp;total : integer;<br>
 <br>
 &nbsp;&nbsp;<b>function</b> get_customer <b>return</b> customer <b>is</b> <b>null</b> <b>abstract</b>;<br>
-&nbsp;&nbsp;<b>pragma</b> constraint( optmization, scalability );<br>
+&nbsp;&nbsp;<b>pragma</b> constraint( optimization, scalability );<br>
 &nbsp;&nbsp;<b>pragma</b> constraint( physical, network );<br>
 &nbsp;&nbsp;<b>pragma</b> todo( team_awesome, "get_customer", work_measure.story_points, 2, work_priority.severity, 3 );<br>
 &nbsp;&nbsp;-- a stub function<br>
 <br>
 &nbsp;&nbsp;<b>function</b> get_supplier <b>return</b> supplier <b>is</b> <b>null</b> <b>abstract</b>;<br>
-&nbsp;&nbsp;<b>pragma</b> constraint( optmization, scalability );<br>
+&nbsp;&nbsp;<b>pragma</b> constraint( optimization, scalability );<br>
 &nbsp;&nbsp;<b>pragma</b> constraint( physical, network );<br>
 &nbsp;&nbsp;<b>pragma</b> todo( team_awesome, "get_supplier", work_measure.story_points, 2, work_priority.severity, 3 );<br>
 &nbsp;&nbsp;-- a stub function<br>
 <br>
 &nbsp;&nbsp;<b>procedure</b> set_customer( c : customer; name : string ) <b>is</b> <b>null</b> <b>abstract</b>;<br>
-&nbsp;&nbsp;<b>pragma</b> constraint( optmization, scalability );<br>
+&nbsp;&nbsp;<b>pragma</b> constraint( optimization, scalability );<br>
 &nbsp;&nbsp;<b>pragma</b> constraint( physical, network );<br>
 &nbsp;&nbsp;<b>pragma</b> todo( team_awesome, "set_customer", work_measure.story_points, 2, work_priority.severity, 3 );<br>
 &nbsp;&nbsp;-- a stub function<br>
 <br>
 &nbsp;&nbsp;<b>procedure</b> set_supplier( s : supplier; name : string ) <b>is</b> <b>null</b> <b>abstract</b>;<br>
-&nbsp;&nbsp;<b>pragma</b> constraint( optmization, scalability );<br>
+&nbsp;&nbsp;<b>pragma</b> constraint( optimization, scalability );<br>
 &nbsp;&nbsp;<b>pragma</b> constraint( physical, network );<br>
 &nbsp;&nbsp;<b>pragma</b> todo( team_awesome, "set_supplier", work_measure.story_points, 2, work_priority.severity, 3 );<br>
 &nbsp;&nbsp;-- a stub function<br>
