@@ -1,0 +1,91 @@
+<HEAD><TITLE>design_example.sp</TITLE></HEAD>
+<BODY>
+<HR><DIV ALIGN="center"><H1> File : design_example.sp </H1></DIV><HR>
+<DIV ALIGN="center">
+<TABLE CELLSPACING="0" CELLPADDING="3" WIDTH="80%" SUMMARY="">
+<TR>
+<TD BGCOLOR="black"><SPAN STYLE="color: #00CC00">
+<PRE>
+$ spar --design --check design_example.sp
+design_example.sp: 29: 49: design_example
+  pragma constraint( optimization, performance );
+                                                ^ file constraint optimization value performance conflicts with scalability (at design_example.sp: 23)
+$ spar
+Type "help" for help
+=&gt; help -t ./design_example.sp
+team_awesome,"get_customer",work_measure.story_points, 2,work_priority.severity, 3
+team_awesome,"get_supplier",work_measure.story_points, 2,work_priority.severity, 3
+team_awesome,"set_customer",work_measure.story_points, 2,work_priority.severity, 3
+team_awesome,"set_supplier",work_measure.story_points, 2,work_priority.severity, 3
+
+Amount of Work
+
+Story Points: 8
+
+Priorities of Work
+
+Severity 3: 4
+
+Number of To-Do Items: 4
+
+</PRE>
+</SPAN>
+</TD>
+</TR>
+</TABLE>
+</DIV>
+<HR>
+
+<PRE>
+#!/usr/local/bin/spar
+
+<b>pragma</b> annotate( summary, "design_example" );
+<b>pragma</b> annotate( description, "A demonstration of design features" );
+<b>pragma</b> annotate( author, "Ken O. Burtch" );
+<b>pragma</b> license( unrestricted );
+
+<b>pragma</b> restriction( no_external_commands );
+
+<b>procedure</b> design_example <b>is</b>
+  team_awesome : teams.member;
+
+  <b>type</b> customer <b>is</b> <b>new</b> natural;
+  no_customer : <b>constant</b> customer := 0;
+
+  <b>type</b> supplier <b>is</b> <b>new</b> natural;
+  no_supplier : <b>constant</b> supplier := 0;
+
+  total : integer;
+
+  <b>function</b> get_customer <b>return</b> customer <b>is</b> <b>null</b> <b>abstract</b>;
+  <b>pragma</b> constraint( optimization, scalability );
+  <b>pragma</b> constraint( physical, network );
+  <b>pragma</b> todo( team_awesome, "get_customer", work_measure.story_points, 2, work_priority.severity, 3 );
+  <FONT COLOR=green><EM>-- a stub function</EM></FONT>
+
+  <b>function</b> get_supplier <b>return</b> supplier <b>is</b> <b>null</b> <b>abstract</b>;
+  <b>pragma</b> constraint( optimization, performance ); <FONT COLOR=green><EM>-- ERROR: design constraint conflict</EM></FONT>
+  <b>pragma</b> constraint( physical, network );
+  <b>pragma</b> todo( team_awesome, "get_supplier", work_measure.story_points, 2, work_priority.severity, 3 );
+  <FONT COLOR=green><EM>-- a stub function</EM></FONT>
+
+  <b>procedure</b> set_customer( c : customer; name : string ) <b>is</b> <b>null</b> <b>abstract</b>;
+  <b>pragma</b> constraint( optimization, scalability );
+  <b>pragma</b> constraint( physical, network );
+  <b>pragma</b> todo( team_awesome, "set_customer", work_measure.story_points, 2, work_priority.severity, 3 );
+  <FONT COLOR=green><EM>-- a stub function</EM></FONT>
+
+  <b>procedure</b> set_supplier( s : supplier; name : string ) <b>is</b> <b>null</b> <b>abstract</b>;
+  <b>pragma</b> constraint( optimization, scalability );
+  <b>pragma</b> constraint( physical, network );
+  <b>pragma</b> todo( team_awesome, "set_supplier", work_measure.story_points, 2, work_priority.severity, 3 );
+  <FONT COLOR=green><EM>-- a stub function</EM></FONT>
+
+<b>begin</b>
+  <b>null</b>; <FONT COLOR=green><EM>-- no main program</EM></FONT>
+<b>end</b> design_example;
+
+<FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
+<FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
+
+</PRE></BODY></HTML>
