@@ -128,7 +128,20 @@ problems.  Click on a title to expand or collapse a box.</p>
 </UL>
 </DIV>
 </DIV>
+
+<DIV class="middle_cell_of_three">
+<P CLASS="category" TITLE="click to show/hide" onclick="toggle( 'demos' )"><SPAN id="demos_show" >&gt;</SPAN><SPAN id="demos_hide" style="display:none" >V</SPAN> Demonstrations</P>
+<p>Examples of interesting features.</p>
+<DIV id="demos" style="display:none">
+<UL CLASS="no_bullets">
+<LI><A HREF="design_example.html">design_example.sp</A></LI>
+<LI><A HREF="side_effects.html">side_effects.sp</A></LI>
+<LI><A HREF="write_ownership.html">write_ownership.sp</A></LI>
+</UL>
+</DIV>
+</DIV>
 <BR>
+
 
 <DIV class="left_cell_of_three">
 <P CLASS="category" TITLE="click to show/hide" onclick="toggle( 'algorithms' )"><SPAN id="algorithms_show" >&gt;</SPAN><SPAN id="algorithms_hide" style="display:none" >V</SPAN> Algorithms</P>
