@@ -1,0 +1,4 @@
+m : integer;
+
+vectors.clear( m );
+
