@@ -1,0 +1,6 @@
+--m : hashed_maps.map( string, string );
+m : string;
+b : boolean;
+
+b := vectors.is_empty( m );
+
