@@ -1,0 +1,6 @@
+--m : vectors.map( string, string );
+m : string;
+b : boolean;
+
+b := vectors.capacity( m );
+
